deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizards-ward
  labels:
    app: wizards-ward
spec:
  selector:
    app: wizards-ward
  ports:
    - name: http
      port: 8080
      targetPort: 8080
